# gifconvert

./: Cargo.toml  README.md
.github/workflows/: buildAndPack.yml
src/: args.rs  file.rs  main.rs
