[package]
name = "gifconvert"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.1.15", features = ["derive"] }

[dependencies.windows]
version = "0.35.0"
features = [
    "alloc",
    "Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Storage",
    "Storage_Streams",
    "Graphics",
    "Graphics_Imaging",
]

